[package]
name = "rustberry-pi-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# blinky
embedded-hal = "0.2.7"
rp-pico = "0.6.0"
cortex-m = "0.7.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.2"

# ☝️ + usb-serial-communicator
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.16"
