[package]
name = "rustberry-pi-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# blink on-board led
embedded-hal = "0.2.7"
rp-pico = "0.6.0"
cortex-m = "0.7.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.2"

# ☝️ + usb-serial-communicator
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.16"


[[example]]
name = "blink-on-board-led"
path = "src/example/blink-on-board-led/example.rs"

[[example]]
name = "blink-outer-led"
path = "src/example/blink-outer-led/example.rs"

[[example]]
name = "light-on-board-led-on-key-press"
path = "src/example/light-on-board-led-on-key-press/example.rs"

[[example]]
name = "light-outer-led-on-key-press"
path = "src/example/light-outer-led-on-key-press/example.rs"

[[example]]
name = "usb-serial-communicator"
path = "src/example/usb-serial-communicator/example.rs"
