[package]
name = "rustberry-pi-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# blink on-board led
embedded-hal = "0.2.7"
rp-pico = "0.6.0"
cortex-m = "0.7.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.2"

# ☝️ + usb-serial-communicator
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.16"

# rtic
cortex-m-rtic = "1.1.3"
fugit = "0.3.6"

# keyberon
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
rp2040-hal = "0.7.0"
rp2040-monotonic = "1.2.0"

defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[[example]]
name = "blink-on-board-led"
path = "src/examples/blink-on-board-led/example.rs"

[[example]]
name = "blink-outer-led"
path = "src/examples/blink-outer-led/example.rs"

[[example]]
name = "light-on-board-led-on-key-press"
path = "src/examples/light-on-board-led-on-key-press/example.rs"

[[example]]
name = "light-outer-led-on-key-press"
path = "src/examples/light-outer-led-on-key-press/example.rs"

[[example]]
name = "usb-serial-communicator"
path = "src/examples/usb-serial-communicator/example.rs"

[[example]]
name = "rtic-blink-on-board-led"
path = "src/examples/rtic-blink-on-board-led/example.rs"

[[example]]
name = "rtic-blink-outer-led"
path = "src/examples/rtic-blink-outer-led/example.rs"

[[example]]
name = "light-on-board-led-on-gpio-key-press"
path = "src/examples/light-on-board-led-on-gpio-key-press/example.rs"

[[example]]
name = "light-outer-led-on-gpio-key-press"
path = "src/examples/light-outer-led-on-gpio-key-press/example.rs"

[[example]]
name = "toggle-on-board-led-on-gpio-key-press"
path = "src/examples/toggle-on-board-led-on-gpio-key-press/example.rs"

[[example]]
name = "keyberon-one-key-keyboard"
path = "src/examples/keyberon-one-key-keyboard/example.rs"

[[example]]
name = "rtic-software-task"
path = "src/examples/rtic-software-task/example.rs"

[[example]]
name = "picoprobe-debugging"
path = "src/examples/picoprobe-debugging/example.rs"
